# TDS

./: .gitignore  BUILD.md  BUILD_INSTRUCTIONS.md  BUILD_LINUX.md  CMakeLists.txt  COMPILATION_FIX.md  CONTRIBUTING.md  CONTROLS.md  CSHARP_FIXES.md  CivilizationAI.cpp  CivilizationAI.h  ClientMain.cpp  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  ENGINE_ARCHITECTURE.md  EXTRACTION_SHOOTER_README.md  ExtractionShooter.h  ExtractionShooter.sln  ExtractionShooterClient.vcxproj  ExtractionShooterRaylib.vcxproj  ExtractionShooterServer.vcxproj  FIX_IDE_ERRORS.md  FPS_FEATURES.md  FPS_README.md  GAMEPLAY_SYSTEMS.md  GameUI.h  GameplayFeatures.cpp  GameplayFeatures.h  IDE_CONFIGURATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  InventorySystem.h  KALI_QUICK_START.md  MULTIPLAYER_IMPLEMENTATION.md  MULTIPLAYER_TESTING_GUIDE.md  NatPunchServer.vcxproj  NetworkManager.cpp  NetworkManager.h  NeuralCivilization.sln  NeuralCivilization.vcxproj  (+36 more)
Archive/SinglePlayer/: COMBAT_CHANGELOG.md  NeuralCivilization.vcxproj  PlayerCharacter.h  PlayerData.h  README.md  main_old.cpp
Client/: GameClient.cpp  GameClient.h  LobbyUI.cpp  LobbyUI.h  LoginUI.cpp  LoginUI.h  MainMenuUI.cpp  MainMenuUI.h  NetworkClient.cpp  NetworkClient.h  UIManager.cpp  UIManager.h
Common/: DataStructures.h  ItemDatabase.h  NetworkProtocol.h  Utils.h
NeuralCi.12345678/x64/Debug/: NeuralCivilization.exe.recipe  NeuralCivilization.ilk  vc143.idb
NeuralCi.12345678/x64/Debug/NeuralCi.12345678.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NeuralCivilization.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Server/: AuthManager.h  FriendManager.h  LobbyManager.h  MatchManager.cpp  MatchManager.h  MerchantManager.h  NetworkServer.cpp  NetworkServer.h  NeuralCivilizationServer.vcxproj  PersistenceManager.h  ServerMain.cpp
assets/animations/: weapon_ads.anim  weapon_fire.anim  weapon_idle.anim  weapon_reload.anim  weapon_sprint.anim
resources/shaders/: bloom.fs  lighting.fs  lighting.vs
src/client/: Game.cpp  Game.h  PlaceholderModels.h  RaylibGameClient.h  RaylibMain.cpp  RaylibPlatform.h  main.cpp  main_old.cpp
src/client/Audio/: AudioManager.cpp  AudioManager.h
src/client/Gameplay/: Inventory.cpp  Inventory.h  LootSpawn.cpp  LootSpawn.h  Player.cpp  Player.h  RemotePlayer.cpp  RemotePlayer.h  Weapon.cpp  Weapon.h
src/client/Network/: NetworkClient.cpp  NetworkClient.h  STUNClient.cpp  STUNClient.h
src/client/Rendering/: Camera.cpp  Camera.h  ModelManager.cpp  ModelManager.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h
src/client/UI/: HUD.cpp  HUD.h  InventoryUI.cpp  InventoryUI.h  LoginUI.cpp  LoginUI.h  MainMenu.cpp  MainMenu.h  UIManager.cpp  UIManager.h
src/client/animation/: AnimationController.h
src/client/audio/: SoundSystem.h
src/client/effects/: ParticleSystem.h
src/client/graphics/: Skybox.h
src/client/network/: NetworkClient.cpp  NetworkClient.h
src/client/ui/: Animation.cpp  Animation.h  EventSystem.cpp  EventSystem.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  ImGuiManager.h  LobbyScene.h  LobbyUI.cpp  LobbyUI.h  LoginScene.cpp  LoginScene.h  LoginUI.cpp  LoginUI.h  MainMenuScene.cpp  MainMenuScene.h  MainMenuUI.cpp  MainMenuUI.h  Minimap.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Scheduler.cpp  Scheduler.h  ThreadPool.cpp  ThreadPool.h  UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIInputField.cpp  UIInputField.h  UIManager.cpp  UIManager.h  UIPanel.cpp  UIPanel.h  UISceneManager.cpp  (+3 more)
src/common/: Compression.cpp  Compression.h  ConfigManager.h  CorpseSystem.h  DataStructures.h  ItemDatabase.h  Items.cpp  Items.h  Math.cpp  Math.h  NetworkProtocol.h  Protocol.cpp  Protocol.h
src/engine/: GameEngine.cpp  GameEngine.h
src/engine/audio/: AudioEngine.h
src/engine/core/: Platform.h
src/engine/network/: NetworkEngine.h
src/engine/particles/: ParticleSystem.h
src/engine/physics/: PhysicsEngine.h
src/engine/rendering/: RenderEngine.h
src/engine/resources/: ResourceManager.h
src/engine/scene/: Entity.h  IScene.h  Prefab.h  SceneManager.cpp  SceneManager.h
src/engine/terrain/: TerrainSystem.cpp  TerrainSystem.h
src/engine/weather/: WeatherSystem.h
src/game/scenes/: LobbyScene.cpp  LobbyScene.h  MenuScene.cpp  MenuScene.h  MerchantScene.cpp  MerchantScene.h  RaidScene.cpp  RaidScene.h  StashScene.cpp  StashScene.h
src/game/systems/: FriendsSystem.cpp  FriendsSystem.h  InventorySystem.cpp  InventorySystem.h  LootSystem.cpp  LootSystem.h  PartySystem.cpp  PartySystem.h
src/game/world/: BuildingSystem.cpp  BuildingSystem.h
src/natpunch/: NatPunchClient.h  NatPunchServer.h  NatPunchServerMain.cpp
src/server/: Server.cpp  Server.h  main.cpp
src/server/Database/: Database.cpp  Database.h
src/server/Gameplay/: AIController.cpp  AIController.h  GameWorld.cpp  GameWorld.h  PhysicsWorld.cpp  PhysicsWorld.h
src/server/Managers/: AuthManager.cpp  AuthManager.h  LootManager.cpp  LootManager.h  MatchManager.cpp  MatchManager.h  MerchantManager.cpp  MerchantManager.h  PlayerManager.cpp  PlayerManager.h
src/server/Network/: NetworkServer.cpp  NetworkServer.h  PacketHandler.cpp  PacketHandler.h  STUNServer.cpp  STUNServer.h
src/server/managers/: AuthManager.cpp  AuthManager.h  FriendManager.cpp  FriendManager.h  LobbyManager.cpp  LobbyManager.h  MatchManager.cpp  MatchManager.h  MerchantManager.cpp  MerchantManager.h  PersistenceManager.cpp  PersistenceManager.h
src/server/network/: NetworkServer.h
